added scopes providing